--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "https://github.com/Github-Suriya/api-preview-vscode-ext"
   },
-  "icon": "media/icon.png",
+  "icon": "media/icon-min.png",
   "categories": [
     "Other"
   ],
